# psmt-rs

./: .gitignore  .rusty-hook.toml  Cargo.toml  Justfile  README.md  rust-toolchain.toml
.circleci/: config.yml
crates/libpsmt/: Cargo.toml
crates/libpsmt-impl/: Cargo.toml
crates/libpsmt-impl/src/: lib.rs
crates/libpsmt-proc/: Cargo.toml
crates/libpsmt-proc/src/: lib.rs
crates/libpsmt/src/: config.rs  error.rs  lib.rs
crates/psmt/: Cargo.toml
crates/psmt/src/: cli.rs  main.rs
crates/psmt/src/commands/: init.rs  mod.rs  test.rs
src/: cli.rs  main.rs
src/commands/: mod.rs  test.rs
