[package]
name = "libpsmt-proc"
authors = [ "Pablo Hernandez (@Hadronomy)" ]
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0.75"

