[package]
name = "psmt"
authors = [ "Pablo Hernandez (@Hadronomy)" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "unicode", "env"] }
colored = "2.0.0"
dialoguer = { version = "0.10.3", features = ["fuzzy-select", "history", "completion", "fuzzy-matcher"] }
enum_dispatch = "0.3.10"
enumflags2 = "0.7.5"
git2 = "0.16.0"
human-panic = "1.0.3"
indicatif = "0.17.3"
libpsmt = { version = "0.1.0", path = "../libpsmt" }
log = "0.4.17"
termination = "0.1.2"
thiserror = "1.0.38"
